<resources>
    <string name="app_name">JunNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Поиск</string>
    <string name="home">Главная</string>
    <string name="settings">Настройки</string>
    <string name="shared">Поделиться</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="add">Добавить</string>
    <string name="clear">Очистить список</string>
    <string name="update">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="heading">Удалить запись?</string>
    <string name="buttonDeleteNoteYes">Удалить запись</string>
    <string name="buttonDeleteNoteNo">Отмена</string>
    <string name="cancel_deletion">Отмена удаления</string>
</resources>